<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Raschetstoimostikvartir"
    android:orientation="vertical">
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:background="@drawable/arrow"
        />
    <TextView
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/text4"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:text="@string/Raschet"
            android:layout_marginTop="43dp"
            android:layout_marginLeft="68dp"
            android:layout_marginRight="43dp"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="519dp"
        android:layout_marginTop="41dp"
        android:background="@color/lightblue"
        android:orientation="vertical"

        >
        <RelativeLayout
            android:layout_width="373dp"
            android:layout_height="28dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">
        <FrameLayout
            android:layout_width="343.55dp"
            android:layout_height="28dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="29.45dp"
            android:background="@drawable/radiusandborder"
            android:backgroundTint="@color/white"
            >
        </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:layout_marginLeft="100dp"
                android:textSize="14sp"
                android:textColor="@color/black"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="380dp"
            android:layout_height="61dp"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="350dp"
                android:layout_height="61dp"
                android:layout_marginLeft="29.45dp"
                android:background="@drawable/radiusandborder"
                android:backgroundTint="@color/white"
                >
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:layout_marginLeft="100dp"
                android:textSize="14sp"
                android:layout_marginTop="-4dp"
                android:textColor="@color/black"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="161dp"
            android:layout_height="35dp"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="145dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="161dp"
                android:layout_height="35dp"
                android:background="@drawable/radius"
                android:backgroundTint="@color/white"
                >
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text3"
                android:textSize="12sp"
                android:layout_marginTop="5dp"></TextView>
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/blue"
            android:background="@drawable/radius"
            android:text="@string/Raschet1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold">
        </androidx.appcompat.widget.AppCompatButton>
        <RelativeLayout
            android:layout_width="161dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="145dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="161dp"
                android:layout_height="55dp"
                android:background="@drawable/radius"
                android:backgroundTint="@color/white"
                >
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/Result"
                android:textSize="14sp"
                android:layout_marginTop="7.86dp"
                android:textStyle="bold"
                android:layout_marginLeft="50dp"
                ></TextView>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>