<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="431dp"
    android:layout_height="731dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginTop="75dp"
            android:layout_marginLeft="40dp"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:background="@drawable/fen"
            />
    <TextView
        android:layout_width="305dp"
        android:layout_height="65dp"
        android:text="@string/Reg"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="43dp"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="519dp"
        android:layout_marginTop="41dp"
        android:background="@color/lightblue"
        android:orientation="vertical"
        android:backgroundTint="@drawable/shadow"
        >

        <TextView
            android:layout_width="283dp"
            android:layout_height="38dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="65dp"
            android:text="@string/text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="31dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="21.14dp"
                android:layout_marginLeft="1dp"
                android:text="@string/Login"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="282dp"
                android:layout_height="3dp"
                android:background="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="31dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="22.68dp"
                android:layout_marginLeft="1dp"
                android:text="@string/Password"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="282dp"
                android:layout_height="3dp"
                android:background="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="183.05dp"
            android:background="@drawable/radius"
            android:backgroundTint="@color/blue"
            android:text="@string/Vhod"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

</LinearLayout>