<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Raschet"
    android:orientation="vertical">
    <TextView
        android:layout_width="365dp"
        android:layout_height="58dp"
        android:text="@string/Result1"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="519dp"
        android:layout_marginTop="42dp"
        android:background="@color/lightblue"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="127dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:background="@drawable/radius"
                android:backgroundTint="@color/white"
                >
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:text="@string/kolvo"
                android:textSize="12sp"
                android:layout_marginTop="11dp"
                android:textStyle="bold"
                android:layout_marginLeft="21dp"
                ></TextView>
        </RelativeLayout>
        <RelativeLayout
        android:layout_width="161dp"
        android:layout_height="55dp"
        android:layout_marginTop="133dp"
        android:layout_marginLeft="127dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="161dp"
            android:layout_height="55dp"
            android:background="@drawable/radius"
            android:backgroundTint="@color/white"
            >
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/Result"
            android:textSize="14sp"
            android:layout_marginTop="7.86dp"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            ></TextView>
    </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/blue"
            android:background="@drawable/radius"
            android:text="@string/Reg"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
</LinearLayout>